# programatically-create-jira-issues-from-github

./: =q!  README.md  date_time.py  jira.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: programatically-create-jira-issues-from-github.yaml
